@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-05-30T16:16:57Z",
+  "timestamp" : "2022-05-31T01:00:40Z",
   "count_outdated" : 305,
   "uniques_outdated" : 158,
   "count" : 331,
-  "uniques" : 177,
+  "uniques" : 176,
   "clones" : [
     {
       "timestamp": "2022-05-17T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 2, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ]
     },
     {
       "timestamp": "2022-05-18T00:00:00Z",
@@ -49,8 +49,8 @@
     },
     {
       "timestamp": "2022-05-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
