@@ -4,8 +4,8 @@
   "clones": [
     {
       "timestamp": "2022-05-17T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 2,
+      "uniques": 1
     },
     {
       "timestamp": "2022-05-18T00:00:00Z",
@@ -34,7 +34,7 @@
     },
     {
       "timestamp": "2022-05-30T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
